# riscv-emu

./: CMakeLists.txt
.cache/clangd/index/: cpu.cpp.DCD05E2B31777725.idx  cpu.hpp.2F1ACE1868ED85EF.idx  main.cpp.ABBB010263F0819B.idx  util.cpp.A6762D6B602AC44D.idx  util.hpp.772927FCF7BA7CF1.idx
include/: cpu.hpp  util.hpp
src/: cpu.cpp  main.cpp  util.cpp
tests/: gen.sh  test1.S
tests/amo/: amo.S  linker.ld
tests/li/: test1.hex
